modules/gdscript/tests/scripts/analyzer/errors/rect2_index_int.gd
func test():
	var r: Rect2 = Rect2()
	print(r[0])
